--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "cp -r src/generated dist/ && tsc && tsc-alias -p tsconfig-alias.json",
     "start": "node dist/index.js",
     "postinstall": "pnpm dlx prisma generate"
   },
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "prisma": "6.14.0",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
